--- a/pandas_01.ipynb
+++ b/pandas_01.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# How to import dataset in python using pandas library\n",
     "Written by: M. Afzal\\\n",
-    "Date: 08.06.2024\\\n",
+    "Date: 12.08.2024\\\n",
     "Email:afzaalm993@gmail.com"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "9    5.4      68        Biryani"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "[87 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "(87, 3)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,16 +301,149 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 87 entries, 0 to 86\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   height          87 non-null     object\n",
+      " 1   weight          87 non-null     int64 \n",
+      " 2   favourite_dish  87 non-null     object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 2.2+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "df.tail(10)"
+    "df.info()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>favourite_dish</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>85</td>\n",
+       "      <td>Biryani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>5.11</td>\n",
+       "      <td>72</td>\n",
+       "      <td>Karahi Ghosht</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>5.3</td>\n",
+       "      <td>62</td>\n",
+       "      <td>Biryani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Pasta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Karahi Ghosht</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Pasta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Karahi Ghosht</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>61</td>\n",
+       "      <td>Biryani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>68</td>\n",
+       "      <td>Chicken Pulao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>96</td>\n",
+       "      <td>Biryani</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   height  weight favourite_dish\n",
+       "77    5.5      85        Biryani\n",
+       "78   5.11      72  Karahi Ghosht\n",
+       "79    5.3      62        Biryani\n",
+       "80    5.4      55          Pasta\n",
+       "81    5.5      52  Karahi Ghosht\n",
+       "82    5.4      55          Pasta\n",
+       "83    5.9      75  Karahi Ghosht\n",
+       "84    5.4      61        Biryani\n",
+       "85    6.2      68  Chicken Pulao\n",
+       "86    5.1      96        Biryani"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail(10)"
+   ]
   }
  ],
  "metadata": {
