10 Minutes to pandas (Practice)

--- a/10_minutes_to_pandas.ipynb
+++ b/10_minutes_to_pandas.ipynb
@@ -511,10 +511,405 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>-0.491267</td>\n",
+       "      <td>0.308811</td>\n",
+       "      <td>0.373559</td>\n",
+       "      <td>0.673872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.739216</td>\n",
+       "      <td>0.900685</td>\n",
+       "      <td>0.903281</td>\n",
+       "      <td>0.948737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-1.652886</td>\n",
+       "      <td>-1.324710</td>\n",
+       "      <td>-0.920873</td>\n",
+       "      <td>-0.323414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-0.868932</td>\n",
+       "      <td>0.072601</td>\n",
+       "      <td>-0.253427</td>\n",
+       "      <td>0.044251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>-0.396730</td>\n",
+       "      <td>0.643662</td>\n",
+       "      <td>0.580135</td>\n",
+       "      <td>0.459943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.076659</td>\n",
+       "      <td>0.784845</td>\n",
+       "      <td>1.050749</td>\n",
+       "      <td>1.091838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>0.290620</td>\n",
+       "      <td>1.176100</td>\n",
+       "      <td>1.325617</td>\n",
+       "      <td>2.238600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              A         B         C         D\n",
+       "count  6.000000  6.000000  6.000000  6.000000\n",
+       "mean  -0.491267  0.308811  0.373559  0.673872\n",
+       "std    0.739216  0.900685  0.903281  0.948737\n",
+       "min   -1.652886 -1.324710 -0.920873 -0.323414\n",
+       "25%   -0.868932  0.072601 -0.253427  0.044251\n",
+       "50%   -0.396730  0.643662  0.580135  0.459943\n",
+       "75%    0.076659  0.784845  1.050749  1.091838\n",
+       "max    0.290620  1.176100  1.325617  2.238600"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <th>2013-01-02</th>\n",
+       "      <th>2013-01-03</th>\n",
+       "      <th>2013-01-04</th>\n",
+       "      <th>2013-01-05</th>\n",
+       "      <th>2013-01-06</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>-1.652886</td>\n",
+       "      <td>0.139690</td>\n",
+       "      <td>-0.112434</td>\n",
+       "      <td>-0.931568</td>\n",
+       "      <td>0.290620</td>\n",
+       "      <td>-0.681026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>0.520739</td>\n",
+       "      <td>0.790932</td>\n",
+       "      <td>0.766584</td>\n",
+       "      <td>1.176100</td>\n",
+       "      <td>-1.324710</td>\n",
+       "      <td>-0.076779</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>1.325617</td>\n",
+       "      <td>0.989564</td>\n",
+       "      <td>-0.394805</td>\n",
+       "      <td>-0.920873</td>\n",
+       "      <td>0.170706</td>\n",
+       "      <td>1.071143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>1.170047</td>\n",
+       "      <td>-0.323414</td>\n",
+       "      <td>0.062674</td>\n",
+       "      <td>2.238600</td>\n",
+       "      <td>0.857212</td>\n",
+       "      <td>0.038110</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   2013-01-01  2013-01-02  2013-01-03  2013-01-04  2013-01-05  2013-01-06\n",
+       "A   -1.652886    0.139690   -0.112434   -0.931568    0.290620   -0.681026\n",
+       "B    0.520739    0.790932    0.766584    1.176100   -1.324710   -0.076779\n",
+       "C    1.325617    0.989564   -0.394805   -0.920873    0.170706    1.071143\n",
+       "D    1.170047   -0.323414    0.062674    2.238600    0.857212    0.038110"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>D</th>\n",
+       "      <th>C</th>\n",
+       "      <th>B</th>\n",
+       "      <th>A</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>1.170047</td>\n",
+       "      <td>1.325617</td>\n",
+       "      <td>0.520739</td>\n",
+       "      <td>-1.652886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-02</th>\n",
+       "      <td>-0.323414</td>\n",
+       "      <td>0.989564</td>\n",
+       "      <td>0.790932</td>\n",
+       "      <td>0.139690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-03</th>\n",
+       "      <td>0.062674</td>\n",
+       "      <td>-0.394805</td>\n",
+       "      <td>0.766584</td>\n",
+       "      <td>-0.112434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-04</th>\n",
+       "      <td>2.238600</td>\n",
+       "      <td>-0.920873</td>\n",
+       "      <td>1.176100</td>\n",
+       "      <td>-0.931568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-05</th>\n",
+       "      <td>0.857212</td>\n",
+       "      <td>0.170706</td>\n",
+       "      <td>-1.324710</td>\n",
+       "      <td>0.290620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-06</th>\n",
+       "      <td>0.038110</td>\n",
+       "      <td>1.071143</td>\n",
+       "      <td>-0.076779</td>\n",
+       "      <td>-0.681026</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   D         C         B         A\n",
+       "2013-01-01  1.170047  1.325617  0.520739 -1.652886\n",
+       "2013-01-02 -0.323414  0.989564  0.790932  0.139690\n",
+       "2013-01-03  0.062674 -0.394805  0.766584 -0.112434\n",
+       "2013-01-04  2.238600 -0.920873  1.176100 -0.931568\n",
+       "2013-01-05  0.857212  0.170706 -1.324710  0.290620\n",
+       "2013-01-06  0.038110  1.071143 -0.076779 -0.681026"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_index(axis=1, ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-01-05</th>\n",
+       "      <td>0.290620</td>\n",
+       "      <td>-1.324710</td>\n",
+       "      <td>0.170706</td>\n",
+       "      <td>0.857212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-06</th>\n",
+       "      <td>-0.681026</td>\n",
+       "      <td>-0.076779</td>\n",
+       "      <td>1.071143</td>\n",
+       "      <td>0.038110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>-1.652886</td>\n",
+       "      <td>0.520739</td>\n",
+       "      <td>1.325617</td>\n",
+       "      <td>1.170047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-03</th>\n",
+       "      <td>-0.112434</td>\n",
+       "      <td>0.766584</td>\n",
+       "      <td>-0.394805</td>\n",
+       "      <td>0.062674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-02</th>\n",
+       "      <td>0.139690</td>\n",
+       "      <td>0.790932</td>\n",
+       "      <td>0.989564</td>\n",
+       "      <td>-0.323414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-04</th>\n",
+       "      <td>-0.931568</td>\n",
+       "      <td>1.176100</td>\n",
+       "      <td>-0.920873</td>\n",
+       "      <td>2.238600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   A         B         C         D\n",
+       "2013-01-05  0.290620 -1.324710  0.170706  0.857212\n",
+       "2013-01-06 -0.681026 -0.076779  1.071143  0.038110\n",
+       "2013-01-01 -1.652886  0.520739  1.325617  1.170047\n",
+       "2013-01-03 -0.112434  0.766584 -0.394805  0.062674\n",
+       "2013-01-02  0.139690  0.790932  0.989564 -0.323414\n",
+       "2013-01-04 -0.931568  1.176100 -0.920873  2.238600"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(by=\"B\")"
+   ]
   }
  ],
  "metadata": {
