--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1147,6 +1147,155 @@
    "source": [
     "df3 = df2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "survived         0\n",
+       "pclass           0\n",
+       "sex              0\n",
+       "age              0\n",
+       "sibsp            0\n",
+       "parch            0\n",
+       "fare             0\n",
+       "embarked         2\n",
+       "class            0\n",
+       "who              0\n",
+       "adult_male       0\n",
+       "deck           688\n",
+       "embark_town      2\n",
+       "alive            0\n",
+       "alone            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = df3.drop(columns=['deck'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "survived       0\n",
+       "pclass         0\n",
+       "sex            0\n",
+       "age            0\n",
+       "sibsp          0\n",
+       "parch          0\n",
+       "fare           0\n",
+       "embarked       2\n",
+       "class          0\n",
+       "who            0\n",
+       "adult_male     0\n",
+       "embark_town    2\n",
+       "alive          0\n",
+       "alone          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4 = df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4['embark_town'].fillna(df4['embark_town'].mode()[0], inplace=True)\n",
+    "df4['embarked'].fillna(df4['embarked'].mode()[0], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "survived       0\n",
+       "pclass         0\n",
+       "sex            0\n",
+       "age            0\n",
+       "sibsp          0\n",
+       "parch          0\n",
+       "fare           0\n",
+       "embarked       0\n",
+       "class          0\n",
+       "who            0\n",
+       "adult_male     0\n",
+       "embark_town    0\n",
+       "alive          0\n",
+       "alone          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Steps\n",
+    "1. Import libraries\n",
+    "2. Import dataset\n",
+    "3. explore your data\n",
+    "   1. Information\n",
+    "   2. Datatypes\n",
+    "   3. Missing values\n",
+    "   4. Take sense of your data\n",
+    "4. Understanding the variables\n",
+    "5. Relationship between the variable (Heatmap, pairplot, correlation)\n",
+    "6. Brainstorming\n",
+    "   1. Normalize"
+   ]
   }
  ],
  "metadata": {
