Data Wrangling (EDA)

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1283,7 +1283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Steps\n",
+    "# Steps: Data Wrangling (EDA)\n",
     "1. Import libraries\n",
     "2. Import dataset\n",
     "3. explore your data\n",
@@ -1294,7 +1294,9 @@
     "4. Understanding the variables\n",
     "5. Relationship between the variable (Heatmap, pairplot, correlation)\n",
     "6. Brainstorming\n",
-    "   1. Normalize"
+    "   1. Normalize\n",
+    "   2. Removing outliers\n",
+    "7. Tidy Data , Clean Data"
    ]
   }
  ],
