EDA & Data Wrangling

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1296,7 +1296,11 @@
     "6. Brainstorming\n",
     "   1. Normalize\n",
     "   2. Removing outliers\n",
-    "7. Tidy Data , Clean Data"
+    "7. Tidy Data , Clean Data\n",
+    "8. Ready for statsitcal Analysis\n",
+    "9. Ready for prediction\n",
+    "10. Ready for machine learning\n",
+    "11. Ready for Deep learning"
    ]
   }
  ],
