--- a/eda_part2.ipynb
+++ b/eda_part2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -166,33 +166,133 @@
        "      <td>no</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.4583</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Queenstown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51.8625</td>\n",
+       "      <td>S</td>\n",
+       "      <td>First</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>E</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.0750</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>child</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11.1333</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>female</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0708</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Second</td>\n",
+       "      <td>child</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   survived  pclass     sex   age  sibsp  parch     fare embarked  class  \\\n",
-       "0         0       3    male  22.0      1      0   7.2500        S  Third   \n",
-       "1         1       1  female  38.0      1      0  71.2833        C  First   \n",
-       "2         1       3  female  26.0      0      0   7.9250        S  Third   \n",
-       "3         1       1  female  35.0      1      0  53.1000        S  First   \n",
-       "4         0       3    male  35.0      0      0   8.0500        S  Third   \n",
+       "   survived  pclass     sex   age  sibsp  parch     fare embarked   class  \\\n",
+       "0         0       3    male  22.0      1      0   7.2500        S   Third   \n",
+       "1         1       1  female  38.0      1      0  71.2833        C   First   \n",
+       "2         1       3  female  26.0      0      0   7.9250        S   Third   \n",
+       "3         1       1  female  35.0      1      0  53.1000        S   First   \n",
+       "4         0       3    male  35.0      0      0   8.0500        S   Third   \n",
+       "5         0       3    male   NaN      0      0   8.4583        Q   Third   \n",
+       "6         0       1    male  54.0      0      0  51.8625        S   First   \n",
+       "7         0       3    male   2.0      3      1  21.0750        S   Third   \n",
+       "8         1       3  female  27.0      0      2  11.1333        S   Third   \n",
+       "9         1       2  female  14.0      1      0  30.0708        C  Second   \n",
        "\n",
        "     who  adult_male deck  embark_town alive  alone  \n",
        "0    man        True  NaN  Southampton    no  False  \n",
        "1  woman       False    C    Cherbourg   yes  False  \n",
        "2  woman       False  NaN  Southampton   yes   True  \n",
        "3  woman       False    C  Southampton   yes  False  \n",
-       "4    man        True  NaN  Southampton    no   True  "
+       "4    man        True  NaN  Southampton    no   True  \n",
+       "5    man        True  NaN   Queenstown    no   True  \n",
+       "6    man        True    E  Southampton    no   True  \n",
+       "7  child       False  NaN  Southampton    no  False  \n",
+       "8  woman       False  NaN  Southampton   yes  False  \n",
+       "9  child       False  NaN    Cherbourg   yes  False  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
