Data Wrangling( Log Transformation)

--- a/Data Wrangling/data_wrangling_technics.ipynb
+++ b/Data Wrangling/data_wrangling_technics.ipynb
@@ -1179,6 +1179,78 @@
    "source": [
     "df.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1- Import Libraries\n",
+    "import pandas as pd \n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# 2- data\n",
+    "df\n",
+    "\n",
+    "# 3- Select columns to normalize\n",
+    "cols_to_normalize = ['age', 'fare']\n",
+    "\n",
+    "# 4- create the scaler function/tool\n",
+    "scaler = StandardScaler() \n",
+    "\n",
+    "# fit and transfrom the data on scaler or vice versa\n",
+    "df[cols_to_normalize] = scaler.fit_transform(df[cols_to_normalize])\n",
+    "\n",
+    "# check the data\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Log Tranformation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column       Non-Null Count  Dtype   \n",
+      "---  ------       --------------  -----   \n",
+      " 0   survived     891 non-null    int64   \n",
+      " 1   pclass       891 non-null    int64   \n",
+      " 2   sex          891 non-null    object  \n",
+      " 3   age          714 non-null    float64 \n",
+      " 4   sibsp        891 non-null    int64   \n",
+      " 5   parch        891 non-null    int64   \n",
+      " 6   fare         891 non-null    float64 \n",
+      " 7   embarked     889 non-null    object  \n",
+      " 8   class        891 non-null    category\n",
+      " 9   who          891 non-null    object  \n",
+      " 10  adult_male   891 non-null    bool    \n",
+      " 11  deck         203 non-null    category\n",
+      " 12  embark_town  889 non-null    object  \n",
+      " 13  alive        891 non-null    object  \n",
+      " 14  alone        891 non-null    bool    \n",
+      "dtypes: bool(2), category(2), float64(2), int64(4), object(5)\n",
+      "memory usage: 80.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "kashti = sns.load_dataset('titanic')\n",
+    "kashti.info()"
+   ]
   }
  ],
  "metadata": {
