--- a/Machine Learning/ml.ipynb
+++ b/Machine Learning/ml.ipynb
@@ -19,7 +19,7 @@
    ],
    "source": [
     "\n",
-    "# importing libraries and dataseet with KNN\n",
+    "# importing libraries and dataset (Iris Data ) with KNN\n",
     "from sklearn.datasets import  load_iris\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import  KNeighborsClassifier\n",
