Logistic Regression ( Classification algoritham)

--- a/Machine Learning/classification.ipynb
+++ b/Machine Learning/classification.ipynb
@@ -497,6 +497,57 @@
     "plt.ylabel('True Label')\n",
     "plt.xlabel('Predicted Label')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confusion_matrix :  [[90 23]\n",
+      " [22 44]]\n",
+      "precision_score :  0.6567164179104478\n",
+      "recall_score :  0.6666666666666666\n",
+      "F1 Score :  0.6616541353383459\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Afzaa\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression()\n",
+    "model.fit(x_train, y_train)\n",
+    "y_pred = model.predict(x_test)\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(\"confusion_matrix : \", cm)  \n",
+    "print(\"precision_score : \", precision_score(y_test, y_pred))\n",
+    "print(\"recall_score : \" ,recall_score(y_test, y_pred))\n",
+    "print(\"F1 Score : \" ,f1_score(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
