SVM (Classification Algoritham)

--- a/Machine Learning/classification.ipynb
+++ b/Machine Learning/classification.ipynb
@@ -548,6 +548,43 @@
     "print(\"recall_score : \" ,recall_score(y_test, y_pred))\n",
     "print(\"F1 Score : \" ,f1_score(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVM\n",
+    "### Support vectore Machine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confusion_matrix :  [[102  11]\n",
+      " [ 47  19]]\n",
+      "precision_score :  0.6333333333333333\n",
+      "recall_score :  0.2878787878787879\n",
+      "F1 Score :  0.39583333333333337\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC \n",
+    "model = SVC()\n",
+    "model.fit(x_train, y_train)\n",
+    "y_pred = model.predict(x_test)\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(\"confusion_matrix : \", cm)  \n",
+    "print(\"precision_score : \", precision_score(y_test, y_pred))\n",
+    "print(\"recall_score : \" ,recall_score(y_test, y_pred))\n",
+    "print(\"F1 Score : \" ,f1_score(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
