--- a/Machine Learning/classification.ipynb
+++ b/Machine Learning/classification.ipynb
@@ -585,6 +585,43 @@
     "print(\"recall_score : \" ,recall_score(y_test, y_pred))\n",
     "print(\"F1 Score : \" ,f1_score(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NAIVE Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confusion_matrix :  [[98 15]\n",
+      " [23 43]]\n",
+      "precision_score :  0.7413793103448276\n",
+      "recall_score :  0.6515151515151515\n",
+      "F1 Score :  0.6935483870967741\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "model = GaussianNB()\n",
+    "model.fit(x_train, y_train)\n",
+    "y_pred = model.predict(x_test)\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(\"confusion_matrix : \", cm)  \n",
+    "print(\"precision_score : \", precision_score(y_test, y_pred))\n",
+    "print(\"recall_score : \" ,recall_score(y_test, y_pred))\n",
+    "print(\"F1 Score : \" ,f1_score(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
