KNN grid search CV

--- a/Machine Learning/grid_search_cv.ipynb
+++ b/Machine Learning/grid_search_cv.ipynb
@@ -82,15 +82,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters : {'fit_intercept': True}\n"
+     ]
+    }
+   ],
    "source": [
     "# Linear Regression\n",
     "import pandas as pd \n",
     "import seaborn as sns\n",
     "df = sns.load_dataset('titanic')\n",
-    "\n",
+    "df['age'] = df['age'].fillna(df['age'].mean())\n",
     "x = df[['age']]\n",
     "y = df['fare']\n",
     "\n",
@@ -103,14 +111,82 @@
     "\n",
     "# define parameter grid\n",
     "\n",
-    "param_grid = {'fit_intercept': [True,False], 'normalize': [True, False]}\n",
+    "param_grid = {'fit_intercept': [True,False]}\n",
     "\n",
     "# object grid search cv (creating the model)\n",
     "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='r2')\n",
     "\n",
-    "model.fit(x,y)\n",
+    "# train the model\n",
+    "grid_search.fit(x,y)\n",
     "\n",
-    "y_pred = model.predict([[25]])"
+    "# print the best parameters\n",
+    "print(\"Best Parameters :\" , grid_search.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['survived', 'pclass', 'sex', 'age', 'sibsp', 'parch', 'fare',\n",
+       "       'embarked', 'class', 'who', 'adult_male', 'deck', 'embark_town',\n",
+       "       'alive', 'alone'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# KNN grid search cv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear Regression\n",
+    "import pandas as pd \n",
+    "import seaborn as sns\n",
+    "df = sns.load_dataset('titanic')\n",
+    "df['age'] = df['age'].fillna(df['age'].mean())\n",
+    "x = df[['pclass','sex','age','sibsp','parch','fare']]\n",
+    "y = df['surviced']\n",
+    "pd.get_dummies(x, columns=['sex'], inplace=True)\n",
+    "\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import  GridSearchCV\n",
+    "\n",
+    "# create a model \n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# define parameter grid\n",
+    "\n",
+    "param_grid = {'fit_intercept': [True,False]}\n",
+    "\n",
+    "# object grid search cv (creating the model)\n",
+    "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='r2')\n",
+    "\n",
+    "# train the model\n",
+    "grid_search.fit(x,y)\n",
+    "\n",
+    "# print the best parameters\n",
+    "print(\"Best Parameters :\" , grid_search.best_params_)"
    ]
   }
  ],
