--- a/Machine Learning/grid_search_cv.ipynb
+++ b/Machine Learning/grid_search_cv.ipynb
@@ -58,6 +58,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'algorithm': 'auto', 'leaf_size': 30, 'metric': 'minkowski', 'metric_params': None, 'n_jobs': None, 'n_neighbors': 5, 'p': 2, 'weights': 'uniform'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import Libraries \n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# create a model\n",
+    "model = KNeighborsClassifier()\n",
+    "\n",
+    "# get the parameters list\n",
+    "print(model.get_params())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -155,9 +179,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters : {'n_neighbors': 7, 'weights': 'distance'}\n",
+      "Best Score : 0.6234282955414142\n"
+     ]
+    }
+   ],
    "source": [
     "# Linear Regression\n",
     "import pandas as pd \n",
@@ -165,28 +198,29 @@
     "df = sns.load_dataset('titanic')\n",
     "df['age'] = df['age'].fillna(df['age'].mean())\n",
     "x = df[['pclass','sex','age','sibsp','parch','fare']]\n",
-    "y = df['surviced']\n",
-    "pd.get_dummies(x, columns=['sex'], inplace=True)\n",
+    "y = df['survived']\n",
+    "x = pd.get_dummies(x,columns=['sex'])\n",
     "\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import  GridSearchCV\n",
     "\n",
     "# create a model \n",
-    "model = LinearRegression()\n",
+    "model = KNeighborsClassifier()\n",
     "\n",
     "# define parameter grid\n",
     "\n",
-    "param_grid = {'fit_intercept': [True,False]}\n",
+    "param_grid = {'n_neighbors': [5,7,13,19,25,30],'weights':['uniform', 'distance']}\n",
     "\n",
     "# object grid search cv (creating the model)\n",
-    "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='r2')\n",
+    "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='f1')\n",
     "\n",
     "# train the model\n",
     "grid_search.fit(x,y)\n",
     "\n",
     "# print the best parameters\n",
-    "print(\"Best Parameters :\" , grid_search.best_params_)"
+    "print(\"Best Parameters :\" , grid_search.best_params_)\n",
+    "print(\"Best Score :\" , grid_search.best_score_)"
    ]
   }
  ],
